address feedback (with more efficient queries)