@@ -13,7 +13,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.CriteriaBuilder;
@@ -441,18 +440,15 @@ public class HibernateLocationDAO implements LocationDAO {
 
 		List<Integer> descendantIds = null;
 		if (StringUtils.isNotBlank(criteria.getDescendantOfLocationUuid())) {
-			Integer rootId = session.createNativeQuery("SELECT location_id FROM location WHERE uuid = :uuid", Integer.class)
-			        .setParameter("uuid", criteria.getDescendantOfLocationUuid()).uniqueResult();
-			if (rootId == null) {
-				return Collections.emptyList();
-			}
 			String retiredFilter = criteria.getIncludeRetired() ? "" : " AND retired = false";
 			String cteSql = "WITH RECURSIVE descendants (location_id) AS ("
-			        + " SELECT location_id FROM location WHERE parent_location = :rootId" + retiredFilter + " UNION ALL"
+			        + " SELECT location_id FROM location WHERE parent_location ="
+			        + " (SELECT location_id FROM location WHERE uuid = :uuid)" + retiredFilter + " UNION ALL"
 			        + " SELECT l.location_id FROM location l"
 			        + " INNER JOIN descendants d ON l.parent_location = d.location_id" + retiredFilter
 			        + ") SELECT location_id FROM descendants";
-			descendantIds = session.createNativeQuery(cteSql, Integer.class).setParameter("rootId", rootId).list();
+			descendantIds = session.createNativeQuery(cteSql, Integer.class)
+			        .setParameter("uuid", criteria.getDescendantOfLocationUuid()).list();
 			if (descendantIds.isEmpty()) {
 				return Collections.emptyList();
 			}
@@ -478,20 +474,14 @@ public class HibernateLocationDAO implements LocationDAO {
 		}
 
 		if (criteria.getLocationTagUuids() != null && !criteria.getLocationTagUuids().isEmpty()) {
-			List<String> tagUuids = criteria.getLocationTagUuids().stream().filter(StringUtils::isNotBlank)
-			        .collect(Collectors.toList());
+			List<String> tagUuids = criteria.getLocationTagUuids().stream().filter(StringUtils::isNotBlank).distinct()
+			        .toList();
 			if (!tagUuids.isEmpty()) {
+				Join<Location, LocationTag> tagsJoin = root.join("tags");
+				predicates.add(tagsJoin.get("uuid").in(tagUuids));
+				cq.groupBy(root);
 				if (criteria.getTagMatchMode() == LocationSearchCriteria.TagMatchMode.ALL) {
-					Subquery<Long> tagCountSubquery = cq.subquery(Long.class);
-					Root<Location> subRoot = tagCountSubquery.from(Location.class);
-					Join<Location, LocationTag> tagsJoin = subRoot.join("tags");
-					tagCountSubquery.select(cb.count(subRoot)).where(cb.and(tagsJoin.get("uuid").in(tagUuids),
-					    cb.equal(subRoot.get("locationId"), root.get("locationId"))));
-					predicates.add(cb.equal(cb.literal((long) tagUuids.size()), tagCountSubquery));
-				} else {
-					Join<Location, LocationTag> tagsJoin = root.join("tags");
-					predicates.add(tagsJoin.get("uuid").in(tagUuids));
-					cq.distinct(true);
+					cq.having(cb.equal(cb.count(tagsJoin), (long) tagUuids.size()));
 				}
 			}
 		}
